# foundry

./: Cargo.toml  README.md  build.rs
frontend/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: font-reader.ts  index.css  main.tsx
frontend/src/components/: App.tsx  FontSwitcher.tsx  Header.tsx  InputArea.tsx  Main.tsx  Spinner.tsx
frontend/src/components/quality-check/: QualityCheck.tsx  Text.tsx
src/: main.rs
src/cli/: handler.rs  mod.rs
src/cli/commands/: build.rs  debug.rs  init.rs  mod.rs  server.rs  util.rs
src/font/: builder.rs  config.rs  contour.rs  dimensions.rs  glyphs.rs  kerning.rs  metadata.rs  mod.rs  point.rs  project.rs  samples.rs  sheet.rs  subfamily.rs  unicode_char.rs
src/server/: mod.rs  router.rs  runtime.rs  service.rs  state.rs
src/server/routes/: api.rs  frontend.rs
