[package]
name = "foundry"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.6", default-features = false, features = [
    "http1",
    "macros",
    "json",
    "tokio",
] }
clap = { version = "4.5.36", features = ["derive"] }
colored = "3.0.0"
constcat = "0.6.1"
dialoguer = "0.12.0"
glyph-names = "0.2.0"
image = "0.25.6"
mime_guess = "2.0.5"
multimap = "0.10.1"
read-fonts = "0.35.0"
rust-embed = { version = "8.8.0", features = [
    "debug-embed",
    "interpolate-folder-path",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
strum = { version = "0.27", features = ["derive"] }
time = "0.3.44"
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "io-util",
    "signal",
] }
webbrowser = { version = "1.0.6", features = ["hardened", "disable-wsl"] }
write-fonts = "0.43.0"

[build-dependencies]
which = "8.0.0"

[profile.dev]
debug = false

[profile.release]
opt-level = 3
strip = "symbols"
codegen-units = 1
lto = "fat"
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
